[metadata]
name = escp
version = 0.0.6
url = https://github.com/yackx/python-escp
description = A library to drive ESC/P printers
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = GPL
license_file = LICENSE
author = Youri Ackx
keywords = ESC/P, printers, printing, dot matrix
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Hardware :: Universal Serial Bus (USB) :: Printer
project_urls =
    Bug Tracker = https://github.com/yackx/python-escp/issues
    Documentation = https://github.com/yackx/python-escp/blob/master/README.md
    Release Notes = https://github.com/yackx/python-escp/releases

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
zip_safe = false
include_package_data = true
install_requires =
    pyusb>=1.0.0
    setuptools
tests_require =
    pytest
setup_requires = setuptools_scm

[options.packages.find]
where = src
